Fix overlay text collapsing by resetting line-height inherited from canvas wrap

--- a/_sass/_snake-game.scss
+++ b/_sass/_snake-game.scss
@@ -68,6 +68,7 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  line-height: normal;
   background: rgb(15, 118, 110);
   opacity: 0;
   pointer-events: none;
